Platform 0.90

* TestingHttpServer now supports resources

Platform 0.89

* [Bug] BalancingHttpClient no longer dequotes and requotes the URI.

* [Bug] HttpUriBuilder now quotes the '+' character.

Platform 0.88

* Bootstrap and Logging

  - Bootstrap now initializes logging before the withModules() call. Any
    test code that needs to call doNotInitializeLogging() now must do
    so before the withModules() call.

  - We modified the archetype Main classes to place the Bootstrap call inside
    the try block. This allows more startup exceptions to be logged. We
    recommend applications make a corresponding change to their Main class.

* We removed the deprecated Bootstrap.strictConfig() and
  ConfigurationFactory.getUsedProperties() methods.

* BalancingHttpClient now avoids concurrent calls to the same instance and
  uses discovery changes that happen after the first attempt.

* [Bug] BalancingHttpClient instances couldn't be configured.

* [Bug] JAX-RS response time reporting threw exceptions when a resource class
  had multiple methods with the same name.

* [Bug] The launcher wasn't disconnecting from the terminal upon server start.

Platform 0.87

* The node.pool configuration property now allows uppercase in pool names.

* Reporting

  - JAX-RS now reports response times per resource method and response code.
    JaxrsModule now depends on ReportingModule.

  - Permute reported metric names as necessary to make them acceptable to KairosDB

Platform 0.86

* Reporting

  - The reporting client now uses discovery. The "report.uri" configuration
    property has been removed.

  - Reporting is now enabled by default. It may be disabled with the
    "reporting.enabled" configuration property.

  - The "report.tags" configuration property has been renamed to
    "reporting.tags".

Platform 0.85

* [Bug] BalancingHttpClient preserve the query part of the URI

Platform 0.84

* Reporting (experimental)
